[project]
name = "consistenthashing"
version = "0.1.0"
description = ""
authors = [
    {name = "shubham.dogra",email = "shubhamdogra076@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run = "consistenthashing.main:start"
